@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/database_cleaner
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*database_cleaner-0.6.4 (07 Mar 2011)
+
+  07 Mar 2011; Hans de Graaff <graaff@gentoo.org>
+  +database_cleaner-0.6.4.ebuild:
+  Version bump.
 
   28 Dec 2010; Hans de Graaff <graaff@gentoo.org>
   database_cleaner-0.5.2.ebuild:
